--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
                 </ul>
             </div>
         </nav>
-
     </header>
+    <!-- Main Section start here  -->
     <main>
-
         <section class="banner-section container">
             <div class="banner-text">
                 <h4>Best Destinations around the world</h4>
@@ -44,13 +43,18 @@
                 <p>Built Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed
                     listening. Park gate sell they west hard for the.
                 </p>
-                <button class="btn">Find Out More</button>
-                <span><i class="fas fa-play-circle icon"></i></span>
+                <div class="button-area">
+                    <button class="btn">Find Out More</button>
+                    <span><i class="fas fa-play-circle icon"></i></span>
+                </div>
             </div>
             <div class="images-ara">
                 <img src="assets/women-travelling.png" alt="">
             </div>
         </section>
+
+        <!-- Category start  -->
+
         <section class=" container">
             <div class="category">
                 <h5>Category</h5>
@@ -61,55 +65,73 @@
                 <div class="category-items">
                     <img src="assets/satelite.svg" alt="">
                     <h2>Calculated wateher</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab assumenda at delectus animi adipisci
-                        quisquam neque ullam dolor porro ipsa!</p>
+                    <p>Built Wicket longer admire do barton vanity itself do in it.</p>
                 </div>
                 <div class="category-items">
                     <img src="assets/plane.svg" alt="">
                     <h2>Best Figs</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid rem eligendi necessitatibus
-                        quos quo perspiciatis ea dolore velit ab hic.</p>
+                    <p>Engrossed listening. Park gate sell they west hard for the.</p>
                 </div>
                 <div class="category-items">
                     <img src="assets/local-events.svg" alt="">
                     <h2>Local Events</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore modi facilis obcaecati, fugit
-                        neque omnis. Ullam impedit quas cupiditate veritatis.</p>
+                    <p>Barton vanity itself do in it. Preferd to men it engrossed listening. </p>
                 </div>
                 <div class="category-items">
                     <img src="assets/customization.svg" alt="">
                     <h2>Customize</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit deserunt, quod ratione iure quasi
-                        aut non asperiores iusto enim neque.</p>
+                    <p>We deliver outsourced
+                        aviation services for
+                        military customers</p>
                 </div>
-
             </div>
         </section>
+
+        <!-- Top selling start -->
+
         <section class=" container top-selling">
             <div class="top-selling-text">
-                <h5>top-selling</h5>
+                <h5>Top-selling</h5>
                 <h1>Top Destinations</h1>
             </div>
             <div class="top-selling-image">
                 <div class="images">
                     <img src="assets/Rome.jpg" alt="">
-                    <p>Rome,Itally</p>
-                    <p>$5,42k</p>
-                    <p> <i class="fas fa-location-arrow"></i> 10 Days Trip</p>
+                    <div class="destination-text">
+                        <div>
+                            <p>Rome,Itally</p>
+                        </div>
+                        <div>
+                            <p>$5,42k</p>
+                        </div>
+                    </div>
+                    <span> <i class="fas fa-location-arrow padding-lf"></i> 10 Days Trip</span>
+
                 </div>
                 <div class="images">
                     <img src="assets/Europe.jpg" alt="">
-                    <p>Rome,Itally</p>
-                    <p>$5,42k</p>
-                    <p> <i class="fas fa-location-arrow"></i> 10 Days Trip</p>
+                    <div class="destination-text">
+                        <div>
+                            <p>Rome,Itally</p>
+                        </div>
+                        <div>
+                            <p>$5,42k</p>
+                        </div>
+                    </div>
+                    <span> <i class="fas fa-location-arrow padding-lf"></i> 10 Days Trip</span>
                 </div>
                 <div class="images">
                     <img src="assets/London.jpg" alt="">
-                    <p>Rome,Itally</p>
-                    <p>$5,42k</p>
-                    <p> <i class="fas fa-location-arrow"></i> 10 Days Trip</p>
+                    <div class="destination-text">
+                        <div>
+                            <p>Rome,Itally</p>
+                        </div>
+                        <div>
+                            <p>$5,42k</p>
+                        </div>
+                    </div>
+                    <span> <i class="fas fa-location-arrow padding-lf"></i> 10 Days Trip</span>
                 </div>
-
             </div>
 
         </section>
@@ -132,53 +154,48 @@
                     <button class="btn">Subscribe</button>
                 </div>
             </div>
-
-
         </section>
-        <!-- Footer Area -->
-        <footer class="container">
-            <div class="text-area">
-                <div class="text text-style">
-                    <h2>Jadoo.</h2>
-                    <p>Book your trip in minute, get full Control for much longer.
-                    </p>
-
-                </div>
-                <div class="text">
-                    <h2>Company</h2>
-                    <p>About</p>
-                    <p>Careers</p>
-                    <p>Mobile</p>
-                </div>
-                <div class="text">
-                    <h2>Contact</h2>
-                    <p>Help/FAQ</p>
-                    <p>Press</p>
-                    <p>Affilates</p>
-                </div>
-
-                <div class="text">
-                    <h2>More</h2>
-                    <p>Airlinefees</p>
-                    <p>Airline</p>
-                    <p>Low fare tips</p>
-                </div>
-                <div class="icon">
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-instagram-square"></i>
-                    <i class="fab fa-youtube"></i>
-                </div>
-            </div>
-            <div class="copy-write">
-                <p><small>&copy;All rights reserved@jadoo.co </small></p>
-            </div>
-
-        </footer>
-
     </main>
-    <footer>
+    <!-- Footer Area -->
+    <footer class="container">
+        <div class="text-area">
+            <div class="text text-style">
+                <h2>Jadoo.</h2>
+                <p>Book your trip in minute, get full Control for much longer.
+                </p>
+
+            </div>
+            <div class="text">
+                <h2>Company</h2>
+                <p>About</p>
+                <p>Careers</p>
+                <p>Mobile</p>
+            </div>
+            <div class="text">
+                <h2>Contact</h2>
+                <p>Help/FAQ</p>
+                <p>Press</p>
+                <p>Affilates</p>
+            </div>
+
+            <div class="text">
+                <h2>More</h2>
+                <p>Airlinefees</p>
+                <p>Airline</p>
+                <p>Low fare tips</p>
+            </div>
+            <div class="icon">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+        <div class="copy-write">
+            <p><small>&copy;All rights reserved@jadoo.co </small></p>
+        </div>
 
     </footer>
+
 
 </body>
 
