Responsive all devies

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                     <li><a href="#">Log In</a> </li>
                     <li><a href="#">Sign Up</a></li>
                 </ul>
+                <div class="menu-bar">
+                    <i class="fas fa-bars"></i>
+                </div>
+
+
+
             </div>
         </nav>
     </header>
@@ -193,10 +199,7 @@
         <div class="copy-write">
             <p><small>&copy;All rights reserved@jadoo.co </small></p>
         </div>
-
     </footer>
-
-
 </body>
 
 </html>
